updates to omgd 0.88 profiles

--- a/profiles/local.yml
+++ b/profiles/local.yml
@@ -1,9 +1,3 @@
 omgd:
-  game:
-    targets:
-    - build-web
-    - build-x11-server
   servers:
-    services:
-    - web
-    - dedicated
+    host: 127.0.0.1
